fix arrow alignments, and caret height

--- a/css/main.css
+++ b/css/main.css
@@ -52,3 +52,24 @@
     width:40px;
     height:40px;
 }
+
+.acm-features .owl-controls .owl-buttons > div  {
+    padding-top: 3px;
+}
+
+em {
+   padding-right: 0;
+   margin-top:-4px;
+}
+
+.caret {
+    margin-left: 9px;
+}
+
+.swiper-button-prev svg {
+    margin-left:-3px;
+}
+
+.swiper-button-next svg {
+    margin-right:-4px;
+}
